update guia 22
